--- a/2025/usc-ssc/package.json
+++ b/2025/usc-ssc/package.json
@@ -19,6 +19,7 @@
     "@unocss/vite": "^66.1.4",
     "@vitejs/plugin-vue": "^5.2.3",
     "markdown-it-katex": "^2.0.3",
+    "markdown-it-prism": "^3.0.0",
     "unocss": "^66.1.4",
     "unplugin-vue-markdown": "^28.3.1",
     "vite": "^6.3.5"
