--- a/2025/usc-ssc/package.json
+++ b/2025/usc-ssc/package.json
@@ -16,10 +16,13 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@unocss/preset-wind3": "^66.1.4",
     "@unocss/vite": "^66.1.4",
     "@vitejs/plugin-vue": "^5.2.3",
+    "markdown-it-anchor": "^9.2.0",
     "markdown-it-katex": "^2.0.3",
     "markdown-it-prism": "^3.0.0",
+    "shiki": "^3.6.0",
     "unocss": "^66.1.4",
     "unplugin-vue-markdown": "^28.3.1",
     "vite": "^6.3.5"
